# nyc-user-pos

./: CNAME  Cargo.toml  index.html  merchants.json
docs/: 404.html  CNAME  index.html  user_pos_nyc-103de21fea426527.js  user_pos_nyc-103de21fea426527_bg.wasm  user_pos_nyc-10b084ad6e6382d.js  user_pos_nyc-10b084ad6e6382d_bg.wasm  user_pos_nyc-129dc54c0a190be6.js  user_pos_nyc-129dc54c0a190be6_bg.wasm  user_pos_nyc-13df9b5b1dfdf4dc.js  user_pos_nyc-13df9b5b1dfdf4dc_bg.wasm  user_pos_nyc-181424b9f3e0337b.js  user_pos_nyc-181424b9f3e0337b_bg.wasm  user_pos_nyc-1c4138adabd78852.js  user_pos_nyc-1c4138adabd78852_bg.wasm  user_pos_nyc-1e787bf9a27f8c17.js  user_pos_nyc-1e787bf9a27f8c17_bg.wasm  user_pos_nyc-205e49c353e6c6c8.js  user_pos_nyc-205e49c353e6c6c8_bg.wasm  user_pos_nyc-289bef1bea89d894.js  user_pos_nyc-289bef1bea89d894_bg.wasm  user_pos_nyc-314b4a495ab8acf7.js  user_pos_nyc-314b4a495ab8acf7_bg.wasm  user_pos_nyc-34f434e559b18038.js  user_pos_nyc-34f434e559b18038_bg.wasm  user_pos_nyc-370c4d6580eab5c0.js  user_pos_nyc-370c4d6580eab5c0_bg.wasm  user_pos_nyc-370f37ac666b69ab.js  user_pos_nyc-370f37ac666b69ab_bg.wasm  user_pos_nyc-3a46afca7ee70f04.js  user_pos_nyc-3a46afca7ee70f04_bg.wasm  user_pos_nyc-3b94582a85f5cb51.js  user_pos_nyc-3b94582a85f5cb51_bg.wasm  user_pos_nyc-44b2728c625702d6.js  user_pos_nyc-44b2728c625702d6_bg.wasm  user_pos_nyc-460b25109d301213.js  user_pos_nyc-460b25109d301213_bg.wasm  user_pos_nyc-48b93fd9c855d4ae.js  user_pos_nyc-48b93fd9c855d4ae_bg.wasm  user_pos_nyc-547583c2307d61d5.js  (+106 more)
src/: lib.rs  main.rs  router.rs
src/components/: button.rs  logged_in_pos.rs  merchant_password_input.rs  mod.rs  phone_number_input.rs  pixel_rain.rs  sale_amount_input.rs  sign_in.rs  user_pos_form.rs  user_price_form.rs  verification_code_input.rs
src/pages/: discounts.rs  home.rs  merchant_portal.rs  mod.rs  user_pos.rs
