[package]
name = "user_pos_nyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { vesion = "0.20.0", features = ["csr"] }
gloo = "0.8.1"
rust_decimal = "1.28"
rusty-money = { version = "0.4.1", features = ["iso"]}
serde = "1.0.164"
serde_json = "1.0.97"
yew-router = "0.17.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.37"
stylist = {version = "0.12.0", features = ["yew_integration"]}
wasm-bindgen = "0.2.87"
web-sys = {version = "0.3.64", features = ["HtmlInputElement"]}
yewdux = "0.9.3"
