[package]
name = "user_pos_nyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { vesion = "0.20.0", features = ["csr"] }
gloo = "0.8.1"
gtag-js-sys = "0.2.0"
rust_decimal = "1.28"
rusty-money = { version = "0.4.1", features = ["iso"]}
serde = "1.0.164"
serde_json = "1.0.97"
yew-router = "0.17.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.37"
stylist = {version = "0.12.0", features = ["yew_integration"]}
wasm-bindgen = "0.2.87"
yewdux = "0.9.3"
rand = "0.8.5"
getrandom = {version = "0.2.10", features = ["js"]}
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.64"
features = [
	"Navigator",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"HtmlInputElement",
	"HtmlFormElement",
	"ImageData",
	"ImageBitmap"
]
